...
        android:layout_margin="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">


        <TextView
            android:id="@+id/RecipeNameDetail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:text="Brownies"
            android:gravity="center_horizontal">
        </TextView>



    </android.support.v7.widget.CardView>
...
