<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingapp.MainActivity">

<android.support.v7.widget.RecyclerView
    android:id="@+id/recylerView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


</android.support.v7.widget.RecyclerView>




</LinearLayout>
